Fix : Terminal type in tmux.conf And Add Shell Configs

--- a/Vim/tmux.conf
+++ b/Vim/tmux.conf
@@ -1,5 +1,6 @@
 ##### COLOUR (Solarized dark)
-set -g default-terminal "xterm-256color"
+#set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 # default statusbar colors
 set-option -g status-style fg=yellow,bg=black #yellow and base02
 
