--- a/Vim/tmux.conf
+++ b/Vim/tmux.conf
@@ -13,8 +13,8 @@ set-window-option -g window-status-current-style fg=brightred,bg=default #orange
 #set-window-option -g window-status-current-style bright
 
 # pane border
-set-option -g pane-border-style fg=black #base02
-set-option -g pane-active-border-style fg=brightgreen #base01
+set-option -g pane-border-style fg=green #base02
+set-option -g pane-active-border-style fg=green #base01
 
 # message text
 set-option -g message-style fg=brightred,bg=black #orange and base01
