--- a/Vim/tmux.conf
+++ b/Vim/tmux.conf
@@ -13,8 +13,8 @@ set-window-option -g window-status-current-style fg=brightred,bg=default #orange
 #set-window-option -g window-status-current-style bright
 
 # pane border
-set-option -g pane-border-style fg=green #base02
-set-option -g pane-active-border-style fg=green #base01
+#set-option -g pane-border-style fg=green #base02
+#set-option -g pane-active-border-style fg=green #base01
 
 # message text
 set-option -g message-style fg=brightred,bg=black #orange and base01
@@ -28,3 +28,16 @@ set-window-option -g clock-mode-colour green #green
 
 # bell
 set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
+
+# Use Alt-arrow key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Shift arrow to switch
+bind -n S-Left previous-window
+bind -n S-Right next-window
+
+# Easy config reload
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
