--- a/Vim/tmux.conf
+++ b/Vim/tmux.conf
@@ -29,13 +29,8 @@ set-window-option -g clock-mode-colour green #green
 # bell
 set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
 
-# Use Alt-arrow key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
 
-# Shift arrow to switch
+# Shift arrow to switch windows
 bind -n S-Left previous-window
 bind -n S-Right next-window
 
