--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "workbench.colorTheme": "Atom One Dark",
-    "editor.fontSize": 22,
+    "editor.fontSize": 18,
     "editor.fontFamily": "Fira Code",
     "editor.fontLigatures": true,
     "workbench.statusBar.visible": false,
@@ -8,13 +8,13 @@
     "terminal.integrated.fontFamily": "Fira Code",
     "redhat.telemetry.enabled": true,
     "editor.mouseWheelZoom": true,
-    "debug.console.fontSize": 22,
-    "scm.inputFontSize": 22,
+    "debug.console.fontSize": 18,
+    "scm.inputFontSize": 18,
     "editor.fontWeight": "normal",
-    "terminal.integrated.fontSize": 21,
+    "terminal.integrated.fontSize": 18,
     "window.zoomLevel": 0,
     "python.envFile": "${workspaceFolder}/.venv",
-    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python3.10",
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
     "python.linting.enabled": true,
     "python.linting.pylintEnabled": true,
     "terminal.integrated.defaultProfile.osx": "zsh",
