Update: Backup,Failover in haproxy

--- a/HAProxy-Sample/haproxy.cfg
+++ b/HAProxy-Sample/haproxy.cfg
@@ -89,12 +89,14 @@ backend Server1App
     default-server check 
     server  web1 127.0.0.1:8081
     server  web2 127.0.0.1:8082
+    server backup1 127.0.0.1:8083 backup
 
 backend Server2App 
     balance     roundrobin
     default-server check 
     server  web3 127.0.0.1:8083
     server  web4 127.0.0.1:8084
+    server backup2 127.0.0.1:8081 backup
 
 backend AllServer
     balance     roundrobin
