Fix: SSH Key Identity file to private key

--- a/home/user/.ssh/config
+++ b/home/user/.ssh/config
@@ -1,4 +1,4 @@
-IdentityFile /home/<Your-User>/.ssh/id_rsa.pub 
+IdentityFile /home/<Your-User>/.ssh/id_rsa
 
 Host github.com
   HostName ssh.github.com
