--- a/Vagrant/Centos9/Vagrantfile
+++ b/Vagrant/Centos9/Vagrantfile
@@ -1,25 +1,25 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "geerlingguy/debian10"
+  config.vm.box = "generic/centos9s"
   config.ssh.insert_key = false
   config.vm.synced_folder ".", "/vagrant", disabled: true
-
 
   config.vm.provider :virtualbox do |v|
     v.memory = 1024
     v.linked_clone = true
     v.cpus = 1  # Set the number of CPUs
+    # v.cpusize = 1024  # Set the CPU execution cap (in percentage)
   end
 
   # App Server 1
-  config.vm.define "Debian-1" do |app|
-    app.vm.hostname = "Debian-1.Fun"
-    app.vm.network :public_network, ip: "192.168.1.130"
+  config.vm.define "Centos-1" do |app|
+    app.vm.hostname = "CentOS-1.Fun"
+    app.vm.network :public_network, ip: "192.168.1.120"
   end
 
   # App Server 2
-  config.vm.define "Debian-2" do |app|
-    app.vm.hostname = "Debian-2.Fun"
-    app.vm.network :public_network, ip: "192.168.1.131"
+  config.vm.define "Centos-2" do |app|
+    app.vm.hostname = "CentOS-2.Fun"
+    app.vm.network :public_network, ip: "192.168.1.121"
   end
 
   # # DB Server
