--- a/Vagrant/Debian/Vagrantfile
+++ b/Vagrant/Debian/Vagrantfile
@@ -1,5 +1,5 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "debian/bullseye64"
+  config.vm.box = "generic/debian11"
   config.ssh.insert_key = false
   config.vm.synced_folder ".", "/vagrant", disabled: true
 
