Update: .ssh/config file

--- a/$HOME/user/.ssh/config
+++ b/$HOME/user/.ssh/config
@@ -5,7 +5,13 @@ Host github.com
   User git 
   Port 443 
 
-Host <HostName>
-  HostName <HostIP>
-  User <User-in-Server>
-  Port <SSH-Port>
+# ---- Qemu/KVM -----
+HOST kvm-*
+  User <user-name>
+  Port 22
+
+Host Kvm-Debian
+  HostName 192.168.124.135
+
+Host Kvm-Centos
+  HostName 192.168.124.142
