--- a/Vagrant/Centos9/Vagrantfile
+++ b/Vagrant/Centos9/Vagrantfile
@@ -4,7 +4,7 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder ".", "/vagrant", disabled: true
 
   config.vm.provider :virtualbox do |v|
-    v.memory = 1024
+    v.memory = 2048
     v.linked_clone = true
     v.cpus = 1  # Set the number of CPUs
     # v.cpusize = 1024  # Set the CPU execution cap (in percentage)
@@ -13,13 +13,15 @@ Vagrant.configure("2") do |config|
   # App Server 1
   config.vm.define "Centos-1" do |app|
     app.vm.hostname = "CentOS-1.Fun"
-    app.vm.network :public_network, ip: "192.168.1.120"
+    #app.vm.network :public_network, ip: "192.168.1.120"
+    app.vm.network :private_network, ip: "192.168.50.10"
   end
 
   # App Server 2
   config.vm.define "Centos-2" do |app|
     app.vm.hostname = "CentOS-2.Fun"
-    app.vm.network :public_network, ip: "192.168.1.121"
+    #app.vm.network :public_network, ip: "192.168.1.121"
+    app.vm.network :private_network, ip: "192.168.50.11"
   end
 
   # # DB Server
