--- a/Vagrant/libvirt-kvm/Centos9/Vagrantfile
+++ b/Vagrant/libvirt-kvm/Centos9/Vagrantfile
@@ -1,11 +1,13 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "generic/debian11"
+  config.vm.box = "generic/centos9s"
   config.ssh.insert_key = false
   config.vm.synced_folder ".", "/vagrant", disabled: true
   config.vm.provision "shell", inline: <<-SHELL
     echo 'YOUR_PUBLIC_SSH_KEY' >> /home/vagrant/.ssh/authorized_keys
     chmod 600 /home/vagrant/.ssh/authorized_keys
     chown vagrant:vagrant /home/vagrant/.ssh/authorized_keys
+    echo 'fastestmirror=true' >> /etc/dnf/dnf.conf
+    echo 'proxy=socks5h://192.168.1.106:10808' >> /etc/dnf/dnf.conf
   SHELL
 
   config.vm.provider :libvirt do |libvirt|
@@ -15,15 +17,15 @@ Vagrant.configure("2") do |config|
   end
 
   # App Server 1
-  config.vm.define "Debian-1" do |app1|
-    app1.vm.hostname = "Debian-1.Fun"
-    app1.vm.network :private_network, type: "static", ip: "192.168.121.12", bridge: "virbr0"
+  config.vm.define "CentOS-1" do |app1|
+    app1.vm.hostname = "CentOS-1.Fun"
+    app1.vm.network :private_network, type: "static", ip: "192.168.121.10", bridge: "virbr0"
   end
 
   # App Server 2
-  config.vm.define "Debian-2" do |app2|
-    app2.vm.hostname = "Debian-2.Fun"
-    app2.vm.network :private_network, type: "static", ip: "192.168.121.13", bridge: "virbr0"
+  config.vm.define "CentOS-2" do |app2|
+    app2.vm.hostname = "CentOS-2.Fun"
+    app2.vm.network :private_network, type: "static", ip: "192.168.121.11", bridge: "virbr0"
   end
 
 end
