--- a/Vagrant/libvirt-kvm/Debian/Vagrantfile
+++ b/Vagrant/libvirt-kvm/Debian/Vagrantfile
@@ -1,16 +1,17 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "generic/debian11"
+  config.vm.box = "debian/bookworm64"
   config.ssh.insert_key = false
   config.vm.synced_folder ".", "/vagrant", disabled: true
   config.vm.provision "shell", inline: <<-SHELL
-    echo 'YOUR_PUBLIC_SSH_KEY' >> /home/vagrant/.ssh/authorized_keys
+    echo 'ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIExD+rW9oesmEZ8UusiCc2vYCcUEuyQoGiJMzPKByUVf ali@BB-Fedora' >> /home/vagrant/.ssh/authorized_keys
     chmod 600 /home/vagrant/.ssh/authorized_keys
     chown vagrant:vagrant /home/vagrant/.ssh/authorized_keys
-    echo 'Acquire::http::Proxy "socks5h://192.168.1.106:10808";' >> /etc/apt/apt.conf.d/proxy
+    #echo 'Acquire::http::Proxy "socks5h://192.168.1.106:10808";' >> /etc/apt/apt.conf.d/proxy
+    echo 'Acquire::http::Proxy "socks5h://192.168.2.99:10808";' >> /etc/apt/apt.conf.d/proxy
   SHELL
 
   config.vm.provider :libvirt do |libvirt|
-    libvirt.memory = 2048
+    libvirt.memory = 1024
     libvirt.cpus = 1  # Set the number of CPUs
     # v.cpusize = 1024  # Set the CPU execution cap (in percentage)
   end
@@ -18,13 +19,13 @@ Vagrant.configure("2") do |config|
   # App Server 1
   config.vm.define "Debian-1" do |app1|
     app1.vm.hostname = "Debian-1.Fun"
-    app1.vm.network :private_network, type: "static", ip: "192.168.121.12", bridge: "virbr0"
+    app1.vm.network :private_network, type: "static", ip: "192.168.122.12", bridge: "virbr0"
   end
 
   # App Server 2
   config.vm.define "Debian-2" do |app2|
     app2.vm.hostname = "Debian-2.Fun"
-    app2.vm.network :private_network, type: "static", ip: "192.168.121.13", bridge: "virbr0"
+    app2.vm.network :private_network, type: "static", ip: "192.168.122.13", bridge: "virbr0"
   end
 
 end
