--- a/Vagrant/libvirt-kvm/Debian/Vagrantfile
+++ b/Vagrant/libvirt-kvm/Debian/Vagrantfile
@@ -3,11 +3,10 @@ Vagrant.configure("2") do |config|
   config.ssh.insert_key = false
   config.vm.synced_folder ".", "/vagrant", disabled: true
   config.vm.provision "shell", inline: <<-SHELL
-    echo 'ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIExD+rW9oesmEZ8UusiCc2vYCcUEuyQoGiJMzPKByUVf ali@BB-Fedora' >> /home/vagrant/.ssh/authorized_keys
+    echo 'YOUR-Public-SSH-Key' >> /home/vagrant/.ssh/authorized_keys
     chmod 600 /home/vagrant/.ssh/authorized_keys
     chown vagrant:vagrant /home/vagrant/.ssh/authorized_keys
-    #echo 'Acquire::http::Proxy "socks5h://192.168.1.106:10808";' >> /etc/apt/apt.conf.d/proxy
-    echo 'Acquire::http::Proxy "socks5h://192.168.2.99:10808";' >> /etc/apt/apt.conf.d/proxy
+    echo 'Acquire::http::Proxy "socks5h://192.168.1.106:10808";' >> /etc/apt/apt.conf.d/proxy
   SHELL
 
   config.vm.provider :libvirt do |libvirt|
