Update: Color Scheme for vscode

--- a/IDE/vscode/settings.json
+++ b/IDE/vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "workbench.colorTheme": "Atom One Dark",
+    "workbench.colorTheme": "One Dark Pro Darker",
     "editor.fontSize": 15,
     "editor.fontFamily": "Fira Code",
     "editor.fontLigatures": true,
