--- a/Vagrant/libvirt-kvm/Ubuntu/Vagrantfile
+++ b/Vagrant/libvirt-kvm/Ubuntu/Vagrantfile
@@ -3,7 +3,7 @@ Vagrant.configure("2") do |config|
   config.ssh.insert_key = false
   config.vm.synced_folder ".", "/vagrant", disabled: true
   config.vm.provision "shell", inline: <<-SHELL
-    echo 'ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIExD+rW9oesmEZ8UusiCc2vYCcUEuyQoGiJMzPKByUVf ali@BB-Fedora' >> /home/vagrant/.ssh/authorized_keys
+    echo 'ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIL+CG3Byt/LFRXMM75UoFO249x4fbIIUFeMWdvc3iffu robot@Fedora-FunLife' >> /home/vagrant/.ssh/authorized_keys
     chmod 600 /home/vagrant/.ssh/authorized_keys
     chown vagrant:vagrant /home/vagrant/.ssh/authorized_keys
     echo 'Acquire::http::Proxy "socks5h://192.168.20.178:10808";' >> /etc/apt/apt.conf.d/proxy
@@ -18,25 +18,25 @@ Vagrant.configure("2") do |config|
   # App Server 1
   config.vm.define "Ubuntu-1" do |app1|
     app1.vm.hostname = "Ubuntu-1.Fun"
-    app1.vm.network :private_network, type: "static", ip: "192.168.122.12", bridge: "virbr0"
+    app1.vm.network :private_network, type: "static", ip: "192.168.122.31", bridge: "virbr0"
   end
 
   # App Server 2
   config.vm.define "Ubuntu-2" do |app2|
     app2.vm.hostname = "Ubuntu-1.Fun"
-    app2.vm.network :private_network, type: "static", ip: "192.168.122.13", bridge: "virbr0"
+    app2.vm.network :private_network, type: "static", ip: "192.168.122.32", bridge: "virbr0"
   end
 
   # App Server 3
   config.vm.define "Ubuntu-3" do |app3|
     app3.vm.hostname = "Ubuntu-1.Fun"
-    app3.vm.network :private_network, type: "static", ip: "192.168.122.14", bridge: "virbr0"
+    app3.vm.network :private_network, type: "static", ip: "192.168.122.33", bridge: "virbr0"
   end
 
   # App Server 4
   config.vm.define "Debian-4" do |app4|
     app4.vm.hostname = "Debian-4.Fun"
-    app4.vm.network :private_network, type: "static", ip: "192.168.122.15", bridge: "virbr0"
+    app4.vm.network :private_network, type: "static", ip: "192.168.122.34", bridge: "virbr0"
   end
 
 end
