Update: bashrc and vscode settings

--- a/IDE/code/user-home/dot.config/Code/User/settings.json
+++ b/IDE/code/user-home/dot.config/Code/User/settings.json
@@ -43,5 +43,6 @@
     ],
     "extensions.ignoreRecommendations": true,
     "workbench.colorTheme": "One Dark Pro Darker",
+    "explorer.confirmDelete": false,
     
 }
