Update: Add ssh throught Jump-Server into ssh config file

--- a/User-Home/.ssh/config
+++ b/User-Home/.ssh/config
@@ -15,3 +15,19 @@ Host Kvm-Debian
 
 Host Kvm-Centos
   HostName 192.168.124.142
+
+# SSH To a Server Through a Jump Server 
+
+Host Dest-Server
+  HostName 192.168.1.2
+  User ali
+  Port 22
+  stricthostkeychecking no
+  proxycommand ssh -W %h:%p -q Jump-Server
+
+Host Jump-Server
+  HostName 192.168.2.2
+  User alimehr
+  Port 2200
+  stricthostkeychecking no
+
