--- a/.ssh/config
+++ b/.ssh/config
@@ -1,9 +1,9 @@
-IdentityFile /home/<Your-User>/.ssh/id_rsa
+IdentityFile $HOME/.ssh/id_rsa
 
 Host github.com
   HostName ssh.github.com
-  User git 
-  Port 443 
+  User git
+  Port 443
 
 # ---- Qemu/KVM -----
 # The Capitall HOST , is because of not printing 
