update: .ssg/config, use the http_proxy for ssh

--- a/.ssh/config
+++ b/.ssh/config
@@ -18,7 +18,7 @@ Host Kvm-Debian
 Host Kvm-Centos
   HostName 192.168.124.142
 
-# SSH To a Server Through a Jump Server 
+# SSH To a Server Through a Jump Server
 
 Host Dest-Server
   HostName 192.168.1.2
@@ -33,3 +33,12 @@ Host Jump-Server
   Port 2200
   stricthostkeychecking no
 
+# Connect to a Destination server via HTTP_PROXY
+# Make sure the `connect-proxy` is installed
+
+Host Dest-Server-2
+  HostName 192.168.3.3
+  User alimehr
+  Port 2200
+  ProxyCommand          connect-proxy -S 127.0.0.1:10808 %h %p
+  ServerAliveInterval   10
