--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,38 +1,74 @@
-##### COLOUR (Solarized dark)
-#set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-# default statusbar colors
-set-option -g status-style fg=yellow,bg=black #yellow and base02
+############################################################################
+# Main Settings
+############################################################################
 
-# default window title colors
-set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
-#set-window-option -g window-status-style dim
+# Use urxvt
+set -g default-terminal "rxvt-unicode-256color"
 
-# active window title colors
-set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
-#set-window-option -g window-status-current-style bright
+# Enable scrollback for urxvt
+set-option -ga terminal-override ',rxvt-uni*:XT:Ms=\E]52;%p1%s;%p2%s\007'
 
-# pane border
-#set-option -g pane-border-style fg=green #base02
-#set-option -g pane-active-border-style fg=green #base01
+# Set scrollback history limit
+set -g history-limit 20000
 
-# message text
-set-option -g message-style fg=brightred,bg=black #orange and base01
+# Shorten command delay
+set -sg escape-time 1
 
-# pane number display
-set-option -g display-panes-active-colour brightred #orange
-set-option -g display-panes-colour blue #blue
+# Set window and pane index to 1 (0 by default)
+set-option -g base-index 1
+setw -g pane-base-index 1
 
-# clock
-set-window-option -g clock-mode-colour green #green
+# Fix ssh-agent when tmux is detached
+setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 
-# bell
-set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
+############################################################################
+# Key Bindings
+############################################################################
 
+# Reload configuration
+bind r source-file ~/.tmux.conf \; display " TMUX Configuration Reloaded!"
 
-# Shift arrow to switch windows
-bind -n S-Left previous-window
-bind -n S-Right next-window
+# Nav keys
+bind-key -n C-Left previous-window
+bind-key -n C-Right next-window
 
-# Easy config reload
-bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
+# Split window
+bind-key | split-window -h
+bind-key - split-window -v
+
+############################################################################
+# Bar Settings
+############################################################################
+
+# Colors
+set-option -g message-style "fg=colour0"
+set-option -g message-style "bg=colour202"
+set-option -g pane-border-style "fg=colour235"
+set-option -g pane-active-border-style "fg=colour240"
+
+# Bar general settings
+set-option -g status on
+set -g status-interval 5
+set -g status-justify centre
+
+# Visual notification of activity in other windows
+setw -g monitor-activity on
+set -g visual-activity on
+
+# Window names format
+set -g window-status-format " #W "
+set -g window-status-current-format " #W "
+
+# Status bar colors
+set-option -g status-style "fg=colour46, bg=colour237"
+set-window-option -g window-status-style "fg=colour45, bg=colour237"
+set-window-option -g window-status-current-style "fg=colour46, bg=colour237"
+set-window-option -g window-status-activity-style "fg=colour202, bg=colour237"
+
+# Status bar size
+set-option -g status-left-length 32
+set-option -g status-right-length 32
+
+# Left/Right side of the bar
+set -g status-left " k8s: #[fg=colour45]#(kubectl config current-context | sed -e 's|.*/||g' -e 's|-eks.*||g') "
+set -g status-right " Load: #[fg=colour45]#(awk '{ print $1 }' /proc/loadavg) #[fg=colour46]Ram: #[fg=colour45]#(free -h | awk '/Mem/{ print $3\"/\"$2}') "
